--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "expo-status-bar": "~1.11.1",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "styled-components": "^6.1.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "styled-components": "5.3.8",
+    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.8.2"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.0",
