--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.14",
@@ -19,15 +20,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "styled-components": "5.3.8",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-safe-area-context": "4.8.2"
+    "styled-components": "5.3.8"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.34",
-    "@types/styled-components-react-native": "^5.2.5",
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/styled-components": "^5.1.34",
+    "@types/styled-components-react-native": "^5.2.5",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
