--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "@hooks/*": ["./src/hooks/*"],
       "@screens/*": ["./src/screens/*"],
       "@utils/*": ["./src/utils/*"],
-      "@types/*": ["./src/types/*"],
+      "@customTypes/*": ["./src/types/*"],
       "@storage/*": ["./src/storage/*"],
       "@routes/*": ["./src/routes/*"],
       "@theme/*": ["./src/theme/*"]
