--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
-    "expo-font": "~11.10.3",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-font": "~12.0.5",
+    "expo-status-bar": "~1.12.1",
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "styled-components": "5.3.8"
   },
   "devDependencies": {
@@ -30,7 +30,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
     "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
