--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react-native": "0.74.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "styled-components": "5.3.8"
+    "styled-components": "5.3.8",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
+    "@types/uuid": "^9.0.8",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "~5.3.3"
   },
